--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "appwrite": "^17.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.7"
   },
   "devDependencies": {
